test_suite/tests/ui/identifier/field_tuple.stderr
error: #[serde(field_identifier)] may only contain unit variants
 --> tests/ui/identifier/field_tuple.rs:7:5
  |
7 |     B(u8, u8),
  |     ^^^^^^^^^
